decrease padding on navigation to prevent wrapping

--- a/themes/bijou/scss/_theme.scss
+++ b/themes/bijou/scss/_theme.scss
@@ -128,7 +128,7 @@ h1, h2 {
 		}
 		@media #{$xlarge-up} {
 			font-size: rem-calc(21);
-			padding: 5px 22px;
+			padding: 5px 21px;
 		}
 	}
 }
